crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_html_members_fallback_keeps_kind_column.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>variables</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>members</span>
</span>
</div>

## Variables

| Variable | Description |
| ------ | ------ |
| [config](./variables/config.md) | Config. |

===== combinators/variables/config.md =====
# Variable: config

<div id="config" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">2 members</span></span>
<div class="ox-api-entry__prose">
<p>Config.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function config(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Members</h5>
<table class="ox-api-entry__members-table">
<thead><tr><th>Name</th><th>Kind</th><th>Type</th><th>Description</th></tr></thead>
<tbody>
<tr id="property-name">
  <td><code>name</code></td>
  <td><span class="ox-api-entry__member-kind">property</span></td>
  <td><code class="ox-api-entry__member-type language-typescript">unknown</code></td>
  <td></td>
</tr>
<tr id="method-load">
  <td><code>load</code></td>
  <td><span class="ox-api-entry__member-kind">method</span></td>
  <td><code class="ox-api-entry__member-type language-typescript">unknown</code></td>
  <td></td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>variables</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>members</span>
</span>
</div>

## Modules

- [combinators](./combinators/index.md)
