crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_html_overloads_render_all_call_signatures.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/functions/plugin.md =====
# Function: plugin()

<div id="plugin" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Define a plugin</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--call-signature">
<h4>Call Signature</h4>
<pre><code class="language-typescript">export function plugin&lt;E&gt;(options: WithExt): PluginWithExtension&lt;E&gt;</code></pre>
<div class="ox-api-entry__prose">
<p>Define a plugin with extension.</p>
</div>
</div>
<div class="ox-api-entry__section ox-api-entry__section--call-signature">
<h4>Call Signature</h4>
<pre><code class="language-typescript">export function plugin(options: WithoutExt): PluginWithoutExtension</code></pre>
<div class="ox-api-entry__prose">
<p>Define a plugin without extension.</p>
</div>
</div>
</div>
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>3</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>functions</span>
</span>
</div>

## Functions

| Function | Description |
| ------ | ------ |
| [plugin](./functions/plugin.md) | Define a plugin with extension. |

===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>functions</span>
</span>
</div>

## Modules

- [default](./default/index.md)
