crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_html_property_members_format_list_renders_owned_members.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Options](./interfaces/Options.md) | Options. |

===== combinators/interfaces/Options.md =====
# Interface: Options

<div id="options" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">1 member</span></span>
<div class="ox-api-entry__prose">
<p>Options.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function Options(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<ul class="ox-api-entry__members-list">
<li id="property-http" class="ox-api-entry__member">
  <div class="ox-api-entry__member-heading">
    <code class="ox-api-entry__member-name">http</code>
    <span class="ox-api-entry__member-kind">property</span>
    <code class="ox-api-entry__member-type language-typescript">{ timeout?: number }</code>
  </div>
  <div class="ox-api-entry__member-description">HTTP options.</div>
<ul class="ox-api-entry__property-members-list">
<li class="ox-api-entry__property-member"><div class="ox-api-entry__property-member-heading"><code>timeout</code><span class="ox-api-badge">optional</span> <code class="ox-api-entry__member-type language-typescript">number</code></div><div class="ox-api-entry__property-member-description"><div class="ox-api-entry__member-description">Request timeout.</div></div></li>
</ul>
</li>
</ul>
</div>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Modules

- [combinators](./combinators/index.md)
