crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_html_renders_index_signature_members.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== default/index.md =====
# default

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Args](./interfaces/Args.md) | Arguments. |
| [ArgSchema](./interfaces/ArgSchema.md) | Value type. |

===== default/interfaces/ArgSchema.md =====
# Interface: ArgSchema

<div id="argschema" class="ox-api-entry ox-api-entry--page">
<div class="ox-api-entry__prose">
<p>Value type.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface ArgSchema</code></pre>
</div>
</div>
===== default/interfaces/Args.md =====
# Interface: Args

<div id="args" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">1 member</span></span>
<div class="ox-api-entry__prose">
<p>Arguments.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export interface Args</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group ox-api-entry__member-group--indexable">
<h5>Indexable</h5>
<div class="ox-api-entry__member-details">
<section class="ox-api-entry__member-detail ox-api-entry__member-detail--indexable">
<pre><code class="language-ts">readonly [option: string]: <a href="./ArgSchema.md">ArgSchema</a></code></pre><div class="ox-api-entry__member-description">Argument schema by option name.</div></section>
</div>
</div>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>2</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>members</span>
</span>
</div>

## Modules

- [default](./default/index.md)
