crates/ox_content_docs/src/markdown/tests/snapshots/typedoc_html_sorts_interface_members_alphabetically.snap
---
source: crates/ox_content_docs/src/markdown/tests/helpers/assertions.rs
---
===== combinators/index.md =====
# combinators

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>members</span>
</span>
</div>

## Interfaces

| Interface | Description |
| ------ | ------ |
| [Command](./interfaces/Command.md) | A command. |

===== combinators/interfaces/Command.md =====
# Interface: Command

<div id="command" class="ox-api-entry ox-api-entry--page">
<span class="ox-api-entry__meta"><span class="ox-api-badge">3 members</span></span>
<div class="ox-api-entry__prose">
<p>A command.</p>
</div>
<div class="ox-api-entry__section ox-api-entry__section--signature">
<h4>Signature</h4>
<pre><code class="language-typescript">export function Command(): void</code></pre>
</div>
<div class="ox-api-entry__section ox-api-entry__section--members">
<h4>Members</h4>
<div class="ox-api-entry__member-group">
<h5>Properties</h5>
<table class="ox-api-entry__members-table">
<thead><tr><th>Name</th><th>Type</th><th>Description</th></tr></thead>
<tbody>
<tr id="property-apple">
  <td><code>apple</code></td>
  <td><code class="ox-api-entry__member-type language-typescript">unknown</code></td>
  <td></td>
</tr>
<tr id="property-mango">
  <td><code>mango</code></td>
  <td><code class="ox-api-entry__member-type language-typescript">unknown</code></td>
  <td></td>
</tr>
<tr id="property-zebra">
  <td><code>zebra</code></td>
  <td><code class="ox-api-entry__member-type language-typescript">unknown</code></td>
  <td></td>
</tr>
</tbody>
</table>
</div>
</div>
</div>
===== index.md =====
# API Documentation

Generated by [Ox Content](https://github.com/ubugeeei-prod/ox-content)

<div class="ox-api-stats" aria-label="API reference summary">
<span class="ox-api-stat">
  <strong>1</strong>
  <span>modules</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>symbols</span>
</span>
<span class="ox-api-stat">
  <strong>1</strong>
  <span>interfaces</span>
</span>
<span class="ox-api-stat">
  <strong>3</strong>
  <span>members</span>
</span>
</div>

## Modules

- [combinators](./combinators/index.md)
